<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myos.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.myos.ui.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.myos.ui.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.example.myos.ui.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_serviceorder"
        android:name="com.example.myos.ui.ui.serviceorder.ServiceOrderFragment"
        android:label="Ordem de Serviço"
        tools:layout="@layout/fragment_serviceorder" />
</navigation>
