<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/color_primary"
    android:padding="30dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/ic_back"-->
<!--            android:padding="5dp">-->
<!--        </ImageView>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tile"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            >
        </TextView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username_hint"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    >
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password_hint"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    >
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberme"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox">
            </CheckBox>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

            </Button>


        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_tile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:background="@android:color/transparent">
        </Button>

    </LinearLayout>

</ScrollView>