<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateAccountActivity"
    android:background="@color/color_primary"
    android:padding="30dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back"
                    android:padding="5dp">
                </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_title"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            >
        </TextView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username_hint"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@color/white"
                    android:textColor="@color/white">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password_hint"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:inputType="textPassword"
                    >
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_account_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/color_button">
        </Button>

    </LinearLayout>
</ScrollView>